objects/Test__mdt.object
<CustomObject>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aaa__c</fullName>
        <label>aaa</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>field_test__c</fullName>
        <label>field test</label>
        <metadataRelationshipControllingField>Test__mdt.aaa__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Test</label>
    <pluralLabel>Tests</pluralLabel>
</CustomObject>